# minipx

./: .gitignore  Cargo.toml  Cross.toml  README.MD  install.sh
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  release.yml
cli/: Cargo.toml  README.MD  install.sh
cli/src/: main.rs
cli/src/cli/: arguments.rs  mod.rs
cli/src/config/: types.rs
cli/src/proxy/: http_server.rs  mod.rs  websocket.rs
minipx/: Cargo.toml  README.md
minipx/examples/: README.md  advanced_routing.rs  basic_proxy.rs  custom_config.rs  hot_reload.rs  route_management.rs  with_ipc.rs
minipx/src/: lib.rs
minipx/src/config/: loader.rs  manager.rs  mod.rs  types.rs  validator.rs  watcher.rs
minipx/src/proxy/: forwarder.rs  http_server.rs  mod.rs  request_handler.rs  websocket.rs
minipx/src/utils/: mod.rs  path.rs  validation.rs
src/: command_line_arguments.rs  config.rs  ipc.rs  main.rs  reverse_proxy.rs  ssl_server.rs
src/cli/: arguments.rs  mod.rs
src/config/: loader.rs  mod.rs  types.rs  validator.rs  watcher.rs
src/proxy/: forwarder.rs  request_handler.rs  websocket.rs
src/utils/: path.rs  validation.rs
tools/: README.md
tools/build-archiver/: Cargo.toml
tools/build-archiver/src/: main.rs
tools/cross-build-tool/: Cargo.toml
tools/cross-build-tool/src/: main.rs
web/: Cargo.toml  FEATURES.md  README.md  SETUP.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
web/migrations/: 001_initial_schema.sql  002_add_runtimes_and_startup_commands.sql
web/src/: main.tsx
web/src-actix/: build.rs  certificate_endpoint.rs  db.rs  http_error.rs  lib.rs  main.rs  metrics_endpoint.rs  models.rs  runtime_detector.rs  runtime_endpoint.rs  server_endpoint.rs  test_endpoint.rs
web/src/components/: CertificateModal.tsx  CreateServerModal.tsx  Navigation.tsx  QuickStats.tsx  ServersTable.tsx  SystemResources.tsx
web/src/css/: index.css
web/src/pages/: Certificates.tsx  Dashboard.tsx  Servers.tsx
web/src/providers/: ThemeProvider.tsx
web/src/types/: index.ts
web/src/utils/: api.ts  startupTemplates.ts  zipExtractor.ts
