[package]
name = "minipx_cli"
version = "1.0.1"
edition = "2024"
description = "A simple, configurable TCP/IP reverse proxy"
authors = ["Drew Chase"]
license = "MIT"

[[bin]]
name = "minipx"
path = "src/main.rs"

[dependencies]
minipx = { path = "../minipx" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.99"
clap = { version = "4", features = ["derive", "color", "help", "suggestions", "wrap_help", "error-context", "usage", "string", "unicode"] }
log = "0.4.27"
pretty_env_logger = { version = "0.5.0" }
minipx_web = { path = "../web", optional = true }

[features]
webui = ["dep:minipx_web"]