[package]
name = "minipx_web"
version = "0.0.0"
edition = "2024"
authors = ["Drew Chase (Work) <dcmanproductions@gmail.com>"]
build = "src-actix/build.rs"

[[bin]]
name = "minipx_web"
path = "src-actix/main.rs"

[lib]
name = "minipx_web_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
minipx = { path = "../minipx" }
actix-web = { version = ">=4.9.0" }
actix-files = { version = ">=0.6.6" }
actix-multipart = ">=0.7.2"
futures-util = ">=0.3.30"
serde = { version = ">=1.0.208", features = ["derive"] }
serde_json = { version = ">=1.0.125" }
pretty_env_logger = ">=0.5.0"
include_dir = ">=0.7.4"
walkdir = ">=2.5.0"
log = ">=0.4.22"
anyhow = ">=1.0.95"
thiserror = ">=2.0.11"
vite-actix = ">=0.2.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sysinfo = "0.37.2"
serde_hash = {version = "0.1.3"}
sevenz-rust = "0.6.1"
regex = "1.11"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"
